Added services (Single responsibility), repositories, facades, validators, converters, enums, exceptions, criteria for GET requests, middlewares. Added support to API Versions. Added first test for DriveValidator (Unit test), basic configuration for unit tests.
